--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0"
+    "@emotion/styled": "^11.3.0",
+    "react-router-dom": "^6.0.2"
   }
 }
