--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,8 @@
     "@emotion/styled": "^11.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.0"
   }
 }
