--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "firebase": "^9.5.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "redux": "^4.1.2",
