--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,10 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "resetMocks": false,
+    "clearMocks": true
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -40,9 +44,11 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "firebase": "^9.5.0",
+    "lighthouse": "^9.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0"
   }
