--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/material": "^5.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -43,6 +46,8 @@
   "devDependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@iconify/icons-fa-brands": "^1.1.1",
+    "@iconify/react": "^3.1.2",
     "firebase": "^9.5.0",
     "lighthouse": "^9.1.0",
     "react-redux": "^7.2.6",
